--- a/src/App.css
+++ b/src/App.css
@@ -28,11 +28,49 @@
   color: #61dafb;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.btn1{
+  justify-content: right;
+  background-color: rgb(6, 217, 245);
+  border-radius: 4px;
+  box-shadow: 2px 2px 1px blue;
+  transition-duration: 0.5s;
+  padding: 10px 25px;
+  text-decoration: none;
+  margin: 4px 2px;
+  cursor: pointer;
 }
+.btn1:hover{
+  transition-duration: 1s;
+}
+
+.btn2{
+  justify-content: left;
+  background-color: rgb(6, 217, 245);
+  border-radius: 4px;
+  box-shadow: 2px 2px 1px blue;
+  transition-duration: 0.5s;
+  padding: 10px 25px;
+  margin: 4px 2px;
+  cursor: pointer;
+}
+.btn2:hover{
+  transition-duration: 1s;
+}
+
+
+.buy{
+  justify-content: right;
+  background-color: rgb(6, 217, 245);
+  border-radius: 4px;
+  box-shadow: 2px 2px 1px blue;
+  transition-duration: 0.5s;
+  padding: 10px 25px;
+  text-decoration: none;
+  margin: 4px 2px;
+  cursor: pointer;
+}
+.buy:hover{
+  transition-duration: 1s;
+}
+
+
